--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,3 @@
-@import '_variables.scss'
-@import '_base.scss'
-@import '_mixin.scss'
+@import '_variables.scss';
+@import '_base.scss';
+@import '_mixin.scss';
